<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/main_theme"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mainToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/main_title" />

    <ImageView
        android:id="@+id/mainLogoBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription='"Logo background"'
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113"
        app:srcCompat="@drawable/circle_rotation_background" />

    <ImageView
        android:id="@+id/mainLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription='"Main logo"'
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/mainSearchButton"
        style="@style/custom_home_button"
        android:layout_width="200dp"
        android:layout_height="63dp"
        android:layout_marginTop="72dp"
        android:text="@string/main_button_search"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainLogo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/mainFavoriteButton"
        style="@style/custom_home_button"
        android:layout_width="200dp"
        android:layout_height="63dp"
        android:layout_marginTop="28dp"
        android:text="@string/main_button_favorite"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainSearchButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/mainGuideButton"
        style="@style/custom_home_button"
        android:layout_width="200dp"
        android:layout_height="63dp"
        android:layout_marginTop="28dp"
        android:text="@string/main_button_guide"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainFavoriteButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/mainCreditButton"
        style="@style/custom_home_button"
        android:layout_width="200dp"
        android:layout_height="63dp"
        android:layout_marginTop="28dp"
        android:text="@string/main_button_credit"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainGuideButton" />

    <TextView
        android:id="@+id/main_footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_footer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.99" />

</androidx.constraintlayout.widget.ConstraintLayout>