<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/searchConstraintLayout"
    android:background="@drawable/search_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/searchToolbar"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/search_toolbar_title" />

    <LinearLayout
        android:id="@+id/searchInputLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="35dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/searchInput"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:hint="@string/search_input"
            android:imeOptions="actionDone|actionGo|actionSend" />

        <Button
            android:id="@+id/searchFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:minWidth="0dp"
            android:text="@string/search_filter_button" />
    </LinearLayout>

    <TextView
        android:id="@+id/searchTitle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="44dp"
        android:text="@string/search_title"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchInputLayout" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchTitle"
        app:layout_constraintWidth_percent="0.95"
        android:background="@drawable/recycler_view_frame">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            app:layout_constraintHeight_percent="0.7"
            app:layout_constraintWidth_percent="0.95" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>